--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "d611cc9c",
    "metadata": {},
    "outputs": [],
@@ -13,11 +13,18 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "import pickle\n",
     "df=pd.read_csv('train.csv')\n",
-    "df=df.loc[:,[\"OverallQual\", \"GrLivArea\", \"GarageCars\", \"GarageArea\", \"TotalBsmtSF\", \"1stFlrSF\", \"FullBath\", \"TotRmsAbvGrd\", \"YearBuilt\", \"YearRemodAdd\",\"SalePrice\"]]\n",
+    "l=[\"GrLivArea\", \"TotalBsmtSF\", \"1stFlrSF\", \"YearBuilt\", \"YearRemodAdd\",\"SalePrice\"]\n",
+    "df=df.loc[:,l]\n",
+    "\n",
+    "for i in l:\n",
+    "    IQR=df[i].quantile(0.75)-df[i].quantile(0.25)\n",
+    "    q1=df[i].quantile(0.25)\n",
+    "    q2=df[i].quantile(0.75)\n",
+    "    df=df[(df[i]>=(q1-1.5*IQR)) & (df[i]<=(q2+1.5*IQR))]\n",
     "x=df.iloc[:,:-1]\n",
-    "y=np.log1p(df['SalePrice'])\n",
-    "xtrain,xtest,ytrain,ytest=train_test_split(x,y,test_size=0.1,random_state=1)\n",
-    "dtc=RandomForestRegressor()\n",
+    "y=df['SalePrice']\n",
+    "xtrain,xtest,ytrain,ytest=train_test_split(x,y,test_size=0.1,random_state=15)\n",
+    "dtc=RandomForestRegressor(criterion='absolute_error',max_features='sqrt')\n",
     "dtc.fit(xtrain,ytrain)\n",
     "with open('model.pkl','wb') as f:\n",
     "    pickle.dump(dtc,f)\n"
@@ -26,25 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8607fc2f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97646297",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ddc8fcf",
+   "id": "9bb93133",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -52,7 +41,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env (3.13.5)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -66,7 +55,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
