New backend created'

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "id": "d611cc9c",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
     "    q2=df[i].quantile(0.75)\n",
     "    df=df[(df[i]>=(q1-1.5*IQR)) & (df[i]<=(q2+1.5*IQR))]\n",
     "x=df.iloc[:,:-1]\n",
-    "y=df['SalePrice']\n",
+    "y=np.log1p(df['SalePrice'])\n",
     "xtrain,xtest,ytrain,ytest=train_test_split(x,y,test_size=0.1,random_state=15)\n",
     "dtc=RandomForestRegressor(criterion='absolute_error',max_features='sqrt')\n",
     "dtc.fit(xtrain,ytrain)\n",
